Readme update, demo CSS update, fixes #7 Item jumps to and fro while the mouse pointer is held still

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -58,6 +58,10 @@ h6:last-child
   background-color: #eee;
 }
 
+.dragSortItem {
+  overflow: auto;
+}
+
 .the-item {
   border: 1px solid black;
   margin: 4px;
